Bug 79772 - Unable to select the data range if not initially selected
Summary: Unable to select the data range if not initially selected
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.4.0 target:4.3.0.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-06-07 15:38 UTC by pierre-yves samyn
Modified: 2014-07-21 07:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2014-06-07 15:38:35 UTC
Hi

Unable to select the data range if not initially selected when you create a chart.

Steps to reproduce:

1. File> New> Spreadsheet
2. Insert> Object> Chart

Expected Result: opening wizard with 4 enabled steps
Actual result: only steps 1 and 4 are available.

If you finish creating it is not possible to edit the source range.

Also reproduced (fr-qa) on:
- Version: 4.3.0.0.beta1
Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f
- Windows 7/64 & Version: 4.3.0.0.beta2
Build ID: a06aa316117a6ff0f05c697c82831c227812d810 

So I set status to New

This bug is different, but may be related to bug 78860 (already fixed, thank you Kohei).

Workaround: select at least one cell before create the chart

This is more annoying than it seems because:
- this is the recommended method for creating a "full page" chart
(to compensate for the lack of graphics Excel sheets).
-data range is unaccessible.

Last known functioned Version: 4.2.5.1
Build ID: 881bb88abfe2992c6cede97c23e64a9885de87de

Regards
Pierre-Yves
Comment 1 Jean-Baptiste Faure 2014-06-09 14:17:03 UTC
I reproduce the described behavior with LO 4.3.0.0.beta2+ (Build ID: a442091e3a66b33ecbd461de3fe9afd7add5b107) under Ubuntu 14.04 x86-64. This build has the fix for bug 78860.

Best regards. JBF
Comment 2 Markus Mohrhard 2014-06-22 21:44:50 UTC
This has nothing to do with when the data is selected. The problem is that only a single cell is selected at that point which skips the part that sets an calc data provider.
Comment 3 Commit Notification 2014-06-23 00:38:10 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ca843915505ed6fe6eee2639840cb1ad03a83992

accept also one cell chart ranges for external data provider, fdo#79772



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-06-23 18:49:51 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c2291931213ae990d599b6889d3dd01ce4feb53f&h=libreoffice-4-3

accept also one cell chart ranges for external data provider, fdo#79772


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 pierre-yves samyn 2014-07-21 07:53:40 UTC
Hi

I do not reproduce on windows 7/64 & Version: 4.3.0.3
Build ID: 08ebe52789a201dd7d38ef653ef7a48925e7f9f7

Pierre-Yves