accept also one cell chart ranges for external data provider, fdo#79772

Change-Id: I2078205b0aecdea13e342c4a625b82a70df0fb4f